<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuiTestApp</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_to_start">&lt;&lt;&lt;Swipe to start when instructed&lt;&lt;&lt;</string>
    <string name="run_finished">Run finished!</string>
    <string name="session_finished">Session finished!</string>
    <string name="time_used">Your total time: </string>
    <string name="swipe_to_next_run">&lt;&lt;&lt;Swipe to start next run when instructed&lt;&lt;&lt;</string>
    <string name="swipe_to_continue">&lt;&lt;&lt;Swipe to continue&lt;&lt;&lt;</string>
    <string name="one_choice_question">On turbine 32, what is the status of the MFW pump 2?</string>
    <string name="single_choice_question2">On turbine 31, which high temperature drain pump has the lowest current?</string>
    <string name="single_choice_question3">On turbine 31, what is the status of P108?</string>
    <string name="single_choice_question4">Are the high temperature preheaters by-passed?</string>
    <string name="single_choice_question5">Are any of the turbine regulating valves throttled?</string>
    <string name="single_choice_question6">Are all turbine 32 stop valves open?</string>
    <string name="single1answer1">Running</string>
    <string name="single1answer2">Tripped</string>
    <string name="single2answer1">P104</string>
    <string name="single2answer2">P105</string>
    <string name="single3answer1">Running</string>
    <string name="single3answer2">Stopped</string>
    <string name="single4answer1">Yes</string>
    <string name="single4answer2">No</string>
    <string name="single5answer1">Yes</string>
    <string name="single5answer2">No</string>
    <string name="single6answer1">Yes</string>
    <string name="single6answer2">No</string>
    <string name="multiple_choice_question1">Lorem ipsum lorem ipsum Lorem?</string>
    <string name="multiple_choice_qiestion2">Which animals do you see on the picture to the left?</string>
    <string name="multiple_choice_question3">What colors are in the triangle?</string>
    <string name="multiple_choice_question4">Which shapes do you see in the top left corner?</string>
    <string name="multiple_choice_question5">What colors are on the t-shirt?</string>
    <string name="multiple_choice_question6">What kind of berries are in the picture?</string>
    <string name="multiple_choice_question7">What colors are in the picture in the top right corner?</string>
    <string name="multiple1">Lorem</string>
    <string name="multiple2">Ipsum</string>
    <string name="blåbær">Blueberry</string>
    <string name="bringebær">Raspberry</string>
    <string name="jordbær">Strawberry</string>
    <string name="hvit">White</string>
    <string name="svart">Black</string>
    <string name="sirkel">Circle</string>
    <string name="trekant">Triangle</string>
    <string name="firkant">Square</string>
    <string name="stjerne">Star</string>
    <string name="gul">Yellow</string>
    <string name="rosa">Pink</string>
    <string name="blå">Blue</string>
    <string name="rød">Red</string>
    <string name="hund">Dog</string>
    <string name="gris">Pig</string>
    <string name="sau">Sheep</string>
    <string name="hest">Horse</string>
    <string name="numerical_question1">How many condensate pumps are running on turbine 31?</string>
    <string name="numerical_question2">On turbine 31, which MFW pump has  the highest current?</string>
    <string name="numerical_question3">Which pump is in manual on turbine 32?</string>
    <string name="numerical_question4">On turbine 32, which MFW pump has tripped?</string>
    <string name="numerical_question5">What is the pressure from the MFW pumps on turbine 31?</string>
    <string name="numerical_question6">Which MFW pump on turbine 32 has the highest current?</string>
    <string name="numerical_question7">Which turbine has a switchgear error or fault indication?</string>
    <!--<string name="numerical_question_reset">What is the value of Pi?</string>-->
    <string name="answer_option_one">4</string>
    <string name="answer_option_two">5</string>
    <string name="answer_dont_know">Don\'t know</string>
    <string name="mcDonalds">McDonalds</string>
    <string name="burgerKing">Burger King</string>
    <string name="starBucks">Starbucks</string>
    <string name="kfc">KFC</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="backspace">&lt;--</string>

    <string-array name="questions">
        <item>How many condensate pumps are running on turbine 31?</item>
        <item>How many condensate pumps are running on turbine 32?</item>
        <item>How many condensate pumps are running on turbine 33?</item>
        <item>How many condensate pumps are running on turbine 34?</item>
        <item>How many condensate pumps are running on turbine 35?</item>
        <item>How many condensate pumps are running on turbine 36?</item>
        <item>How many condensate pumps are running on turbine 37?</item>
        <item>How many condensate pumps are running on turbine 38?</item>
        <item>How many condensate pumps are running on turbine 39?</item>
        <item>How many condensate pumps are running on turbine 40?</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
