<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    tools:context="com.example.isabel.usertestapp.NumericalInputFragment">

    <ProgressBar
        android:id="@+id/progressbar9"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:max="10"
        android:progress="0"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/TextFieldStyle"
        android:text="@string/numerical_question6"
        android:id="@+id/numericalQuestion6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inputNumerical6"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/numericalQuestion6"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnReset6"
        android:background="@android:drawable/ic_notification_clear_all"
        android:layout_alignTop="@+id/inputNumerical6"
        android:layout_toStartOf="@+id/btnFourNumerical6" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/zero"
        android:id="@+id/btnZeroNumerical6"
        android:layout_above="@+id/btnSixNumerical6"
        android:layout_toStartOf="@+id/btnOneNumerical6" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/one"
        android:id="@+id/btnOneNumerical6"
        android:layout_above="@+id/btnSixNumerical6"
        android:layout_toStartOf="@+id/btnTwoNumerical6" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/two"
        android:id="@+id/btnTwoNumerical6"
        android:layout_alignTop="@+id/btnThreeNumerical6"
        android:layout_toStartOf="@+id/btnThreeNumerical6" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/three"
        android:id="@+id/btnThreeNumerical6"
        android:layout_above="@+id/btnEightNumerical6"
        android:layout_alignEnd="@+id/inputNumerical6" />


    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/four"
        android:id="@+id/btnFourNumerical6"
        android:layout_above="@+id/btnPointNumerical6"
        android:layout_toEndOf="@+id/inputNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/five"
        android:id="@+id/btnFiveNumerical6"
        android:layout_above="@+id/btnNumerical6DontKnow"
        android:layout_alignStart="@+id/btnZeroNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/six"
        android:id="@+id/btnSixNumerical6"
        android:layout_alignBottom="@+id/btnFiveNumerical6"
        android:layout_alignStart="@+id/btnOneNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/seven"
        android:id="@+id/btnSevenNumerical6"
        android:layout_alignBottom="@+id/btnSixNumerical6"
        android:layout_alignStart="@+id/btnTwoNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/eight"
        android:id="@+id/btnEightNumerical6"
        android:layout_alignBottom="@+id/btnSevenNumerical6"
        android:layout_alignStart="@+id/btnThreeNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/nine"
        android:id="@+id/btnNineNumerical6"
        android:layout_alignBottom="@+id/btnEightNumerical6"
        android:layout_toEndOf="@+id/btnEightNumerical6" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/point"
        android:id="@+id/btnPointNumerical6"
        android:layout_alignBottom="@+id/btnNineNumerical6"
        android:layout_toEndOf="@+id/btnNineNumerical6" />

    <Button
        style="@style/ButtonDontKnowStyle"
        android:text="@string/answer_dont_know"
        android:id="@+id/btnNumerical6DontKnow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/TextFieldSwipeStyle"
        android:text="@string/swipe_to_continue"
        android:id="@+id/numerical6Continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <ImageButton
        style="@style/ButtonNumberStyle"
        android:id="@+id/backspaceNumerical6"
        android:src="@android:drawable/ic_input_delete"
        android:scaleType="centerCrop"
        android:layout_above="@+id/btnPointNumerical6"
        android:layout_toEndOf="@+id/btnFourNumerical6" />

</RelativeLayout>
