<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    tools:context="com.example.isabel.usertestapp.NumericalInputFragment">

    <ProgressBar
        android:id="@+id/progressbar8"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:max="10"
        android:progress="0"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/TextFieldStyle"
        android:text="@string/numerical_question5"
        android:id="@+id/numericalQuestion5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inputNumerical5"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/numericalQuestion5"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnReset5"
        android:background="@android:drawable/ic_notification_clear_all"
        android:layout_alignTop="@+id/inputNumerical5"
        android:layout_alignEnd="@+id/inputNumerical5" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/zero"
        android:id="@+id/btnZeroNumerical5"
        android:layout_alignTop="@+id/btnOneNumerical5"
        android:layout_toStartOf="@+id/btnOneNumerical5" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/one"
        android:id="@+id/btnOneNumerical5"
        android:layout_above="@+id/btnSixNumerical5"
        android:layout_alignStart="@+id/numericalQuestion5" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/two"
        android:id="@+id/btnTwoNumerical5"
        android:layout_alignTop="@+id/btnOneNumerical5"
        android:layout_toEndOf="@+id/btnOneNumerical5" />

    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/three"
        android:id="@+id/btnThreeNumerical5"
        android:layout_alignBottom="@+id/btnTwoNumerical5"
        android:layout_toEndOf="@+id/btnTwoNumerical5" />


    <Button
        style="@style/ButtonNumberStyle"
        android:text="@string/four"
        android:id="@+id/btnFourNumerical5"
        android:layout_alignTop="@+id/btnThreeNumerical5"
        android:layout_alignStart="@+id/btnNineNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/five"
        android:id="@+id/btnFiveNumerical5"
        android:layout_above="@+id/btnNumerical5DontKnow"
        android:layout_alignStart="@+id/btnZeroNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/six"
        android:id="@+id/btnSixNumerical5"
        android:layout_alignBottom="@+id/btnFiveNumerical5"
        android:layout_alignStart="@+id/btnOneNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/seven"
        android:id="@+id/btnSevenNumerical5"
        android:layout_alignBottom="@+id/btnSixNumerical5"
        android:layout_alignStart="@+id/btnTwoNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/eight"
        android:id="@+id/btnEightNumerical5"
        android:layout_alignBottom="@+id/btnSevenNumerical5"
        android:layout_alignStart="@+id/btnThreeNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/nine"
        android:id="@+id/btnNineNumerical5"
        android:layout_alignBottom="@+id/btnEightNumerical5"
        android:layout_toEndOf="@+id/btnEightNumerical5" />

    <Button
        style="@style/ButtonNumberStyleBottom"
        android:text="@string/point"
        android:id="@+id/btnPointNumerical5"
        android:layout_alignBottom="@+id/btnNineNumerical5"
        android:layout_toEndOf="@+id/btnNineNumerical5" />

    <Button
        style="@style/ButtonDontKnowStyle"
        android:text="@string/answer_dont_know"
        android:id="@+id/btnNumerical5DontKnow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/TextFieldSwipeStyle"
        android:text="@string/swipe_to_continue"
        android:id="@+id/numerical5Continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <ImageButton
        style="@style/ButtonNumberStyle"
        android:id="@+id/backspaceNumerical5"
        android:src="@android:drawable/ic_input_delete"
        android:scaleType="centerCrop"
        android:layout_alignBottom="@+id/btnFourNumerical5"
        android:layout_toEndOf="@+id/btnFourNumerical5" />

</RelativeLayout>
