<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    tools:context="com.example.isabel.usertestapp.MultipleChoiceFragment">

    <ProgressBar
        android:id="@+id/progressbar7"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:max="10"
        android:progress="0"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/TextFieldStyle"
        android:text="@string/multiple_choice_question7"
        android:id="@+id/multipleAnswerQuestion7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/blå"
        android:id="@+id/btnMultiple7AnsOne"
        android:layout_alignTop="@+id/btnMultiple7AnsTwo"
        android:layout_toStartOf="@+id/btnMultiple7AnsTwo" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/rød"
        android:id="@+id/btnMultiple7AnsTwo"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/btnMultiple7AnsThree" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/oransje"
        android:id="@+id/btnMultiple7AnsThree"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/btnMultiple7AnsFour" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/gul"
        android:id="@+id/btnMultiple7AnsFour"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/multipleAnswerQuestion7" />

    <Button
        style="@style/ButtonDontKnowStyle"
        android:text="@string/answer_dont_know"
        android:id="@+id/multiple7DontKnow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/TextFieldSwipeStyle"
        android:text="@string/swipe_to_continue"
        android:id="@+id/multipleChoice7Continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
