<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    tools:context="com.example.isabel.guitestapp.SingleChoiceQuestion">


    <TextView
        style="@style/TextFieldStyle"
        android:text="@string/one_choice_question"
        android:id="@+id/singleAnswerQuestion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/answer_option_one"
        android:id="@+id/btnAnswerOption1"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/singleAnswerQuestion" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/answer_option_two"
        android:id="@+id/btnAnswerOption2"
        android:layout_alignTop="@+id/btnAnswerOption1"
        android:layout_alignEnd="@+id/singleAnswerQuestion" />

    <Button
        style="@style/ButtonDontKnowStyle"
        android:text="@string/answer_dont_know"
        android:id="@+id/button"
        android:layout_marginEnd="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
