<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    tools:context="com.example.isabel.usertestapp.MultipleChoiceFragment">

    <TextView
        style="@style/TextFieldStyle"
        android:text="@string/multiple_choice_question1"
        android:id="@+id/multipleAnswerQuestion6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/multiple1"
        android:id="@+id/btnMultiple6AnsOne"
        android:layout_centerVertical="true"
        android:layout_marginLeft="120dp"
        /> <!-- android:layout_marginEnd="64dp" -->

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/multiple2"
        android:id="@+id/btnMultiple6AnsTwo"
        android:layout_alignTop="@+id/btnMultiple6AnsOne"
        android:layout_toEndOf="@+id/btnMultiple6AnsOne" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/multiple1"
        android:id="@+id/btnMultiple6AnsThree"
        android:layout_alignTop="@+id/btnMultiple6AnsTwo"
        android:layout_toEndOf="@+id/btnMultiple6AnsTwo" />

    <Button
        style="@style/ButtonAnswerStyle"
        android:text="@string/multiple2"
        android:id="@+id/btnMultiple6AnsFour"
        android:layout_alignTop="@+id/btnMultiple6AnsThree"
        android:layout_toEndOf="@+id/btnMultiple6AnsThree" />

    <Button
        style="@style/ButtonDontKnowStyle"
        android:text="@string/answer_dont_know"
        android:id="@+id/multiple6DontKnow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/TextFieldSwipeStyle"
        android:text="@string/swipe_to_continue"
        android:id="@+id/multipleChoice6Continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
